--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.7.1",
     "nodemailer-smtp-transport": "^2.4.2",
