--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
